lib/src/xxhash_bindings.g.dart


  /// !
  /// @brief Copies one @ref XXH64_state_t to another.
  ///
  /// @param dst_state The state to copy to.
  /// @param src_state The state to copy from.
  /// @pre
  /// @p dst_state and @p src_state must not be `NULL` and must not overlap.
  void XXH64_copyState(
    ffi.Pointer<XXH64_state_t> dst_state,
    ffi.Pointer<XXH64_state_t> src_state,
  ) {
    return _XXH64_copyState(
      dst_state,
      src_state,
    );
  }

  late final _XXH64_copyStatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH64_state_t>,
              ffi.Pointer<XXH64_state_t>)>>('XXH64_copyState');
  late final _XXH64_copyState = _XXH64_copyStatePtr.asFunction<
      void Function(ffi.Pointer<XXH64_state_t>, ffi.Pointer<XXH64_state_t>)>();

  /// !
  /// @brief Resets an @ref XXH64_state_t to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  /// @param seed The 64-bit seed to alter the hash result predictably.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note This function resets and seeds a state. Call it before @ref XXH64_update().
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH64_reset(
    ffi.Pointer<XXH64_state_t> statePtr,
    int seed,
  ) {
    return _XXH64_reset(
      statePtr,
      seed,
    );
  }

  late final _XXH64_resetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<XXH64_state_t>, XXH64_hash_t)>>('XXH64_reset');
  late final _XXH64_reset = _XXH64_resetPtr.asFunction<
      int Function(ffi.Pointer<XXH64_state_t>, int)>();

  /// !
  /// @brief Consumes a block of @p input to an @ref XXH64_state_t.
  ///
  /// @param statePtr The state struct to update.
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note Call this to incrementally consume blocks of data.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH64_update(
    ffi.Pointer<XXH64_state_t> statePtr,
    ffi.Pointer<ffi.Void> input,
    int length,
  ) {
    return _XXH64_update(
      statePtr,
      input,
      length,
    );
  }

  late final _XXH64_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH64_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH64_update');
  late final _XXH64_update = _XXH64_updatePtr.asFunction<
      int Function(ffi.Pointer<XXH64_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Returns the calculated hash value from an @ref XXH64_state_t.
  ///
  /// @param statePtr The state struct to calculate the hash from.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return The calculated 64-bit xxHash64 value from that state.
  ///
  /// @note
  /// Calling XXH64_digest() will not affect @p statePtr, so you can update,
  /// digest, and update again.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH64_digest(
    ffi.Pointer<XXH64_state_t> statePtr,
  ) {
    return _XXH64_digest(
      statePtr,
    );
  }

  late final _XXH64_digestPtr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(ffi.Pointer<XXH64_state_t>)>>('XXH64_digest');
  late final _XXH64_digest =
      _XXH64_digestPtr.asFunction<int Function(ffi.Pointer<XXH64_state_t>)>();

  /// !
  /// @brief Converts an @ref XXH64_hash_t to a big endian @ref XXH64_canonical_t.
  ///
  /// @param dst The @ref XXH64_canonical_t pointer to be stored to.
  /// @param hash The @ref XXH64_hash_t to be converted.
  ///
  /// @pre
  /// @p dst must not be `NULL`.
  ///
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  void XXH64_canonicalFromHash(
    ffi.Pointer<XXH64_canonical_t> dst,
    int hash,
  ) {
    return _XXH64_canonicalFromHash(
      dst,
      hash,
    );
  }

  late final _XXH64_canonicalFromHashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH64_canonical_t>,
              XXH64_hash_t)>>('XXH64_canonicalFromHash');
  late final _XXH64_canonicalFromHash = _XXH64_canonicalFromHashPtr.asFunction<
      void Function(ffi.Pointer<XXH64_canonical_t>, int)>();

  /// !
  /// @brief Converts an @ref XXH64_canonical_t to a native @ref XXH64_hash_t.
  ///
  /// @param src The @ref XXH64_canonical_t to convert.
  ///
  /// @pre
  /// @p src must not be `NULL`.
  ///
  /// @return The converted hash.
  ///
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  int XXH64_hashFromCanonical(
    ffi.Pointer<XXH64_canonical_t> src,
  ) {
    return _XXH64_hashFromCanonical(
      src,
    );
  }

  late final _XXH64_hashFromCanonicalPtr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(
              ffi.Pointer<XXH64_canonical_t>)>>('XXH64_hashFromCanonical');
  late final _XXH64_hashFromCanonical = _XXH64_hashFromCanonicalPtr.asFunction<
      int Function(ffi.Pointer<XXH64_canonical_t>)>();

  /// !
  /// @brief Calculates 64-bit unseeded variant of XXH3 hash of @p input.
  ///
  /// @param input  The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  ///
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return The calculated 64-bit XXH3 hash value.
  ///
  /// @note
  /// This is equivalent to @ref XXH3_64bits_withSeed() with a seed of `0`, however
  /// it may have slightly better performance due to constant propagation of the
  /// defaults.
  ///
  /// @see
  /// XXH3_64bits_withSeed(), XXH3_64bits_withSecret(): other seeding variants
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  int XXH3_64bits(
    ffi.Pointer<ffi.Void> input,
    int length,
  ) {
    return _XXH3_64bits(
      input,
      length,
    );
  }

  late final _XXH3_64bitsPtr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(
              ffi.Pointer<ffi.Void>, ffi.Size)>>('XXH3_64bits');
  late final _XXH3_64bits =
      _XXH3_64bitsPtr.asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Calculates 64-bit seeded variant of XXH3 hash of @p input.
  ///
  /// @param input  The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  /// @param seed   The 64-bit seed to alter the hash result predictably.
  ///
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return The calculated 64-bit XXH3 hash value.
  ///
  /// @note
  /// seed == 0 produces the same results as @ref XXH3_64bits().
  ///
  /// This variant generates a custom secret on the fly based on default secret
  /// altered using the @p seed value.
  ///
  /// While this operation is decently fast, note that it's not completely free.
  ///
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  int XXH3_64bits_withSeed(
    ffi.Pointer<ffi.Void> input,
    int length,
    int seed,
  ) {
    return _XXH3_64bits_withSeed(
      input,
      length,
      seed,
    );
  }

  late final _XXH3_64bits_withSeedPtr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(ffi.Pointer<ffi.Void>, ffi.Size,
              XXH64_hash_t)>>('XXH3_64bits_withSeed');
  late final _XXH3_64bits_withSeed = _XXH3_64bits_withSeedPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// !
  /// @brief Calculates 64-bit variant of XXH3 with a custom "secret".
  ///
  /// @param data       The block of data to be hashed, at least @p len bytes in size.
  /// @param len        The length of @p data, in bytes.
  /// @param secret     The secret data.
  /// @param secretSize The length of @p secret, in bytes.
  ///
  /// @return The calculated 64-bit XXH3 hash value.
  ///
  /// @pre
  /// The memory between @p data and @p data + @p len must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p data may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// It's possible to provide any blob of bytes as a "secret" to generate the hash.
  /// This makes it more difficult for an external actor to prepare an intentional collision.
  /// The main condition is that @p secretSize *must* be large enough (>= @ref XXH3_SECRET_SIZE_MIN).
  /// However, the quality of the secret impacts the dispersion of the hash algorithm.
  /// Therefore, the secret _must_ look like a bunch of random bytes.
  /// Avoid "trivial" or structured data such as repeated sequences or a text document.
  /// Whenever in doubt about the "randomness" of the blob of bytes,
  /// consider employing @ref XXH3_generateSecret() instead (see below).
  /// It will generate a proper high entropy secret derived from the blob of bytes.
  /// Another advantage of using XXH3_generateSecret() is that
  /// it guarantees that all bits within the initial blob of bytes
  /// will impact every bit of the output.
  /// This is not necessarily the case when using the blob of bytes directly
  /// because, when hashing _small_ inputs, only a portion of the secret is employed.
  ///
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  int XXH3_64bits_withSecret(
    ffi.Pointer<ffi.Void> data,
    int len,
    ffi.Pointer<ffi.Void> secret,
    int secretSize,
  ) {
    return _XXH3_64bits_withSecret(
      data,
      len,
      secret,
      secretSize,
    );
  }

  late final _XXH3_64bits_withSecretPtr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Pointer<ffi.Void>, ffi.Size)>>('XXH3_64bits_withSecret');
  late final _XXH3_64bits_withSecret = _XXH3_64bits_withSecretPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<XXH3_state_t> XXH3_createState() {
    return _XXH3_createState();
  }

  late final _XXH3_createStatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<XXH3_state_t> Function()>>(
          'XXH3_createState');
  late final _XXH3_createState =
      _XXH3_createStatePtr.asFunction<ffi.Pointer<XXH3_state_t> Function()>();

  int XXH3_freeState(
    ffi.Pointer<XXH3_state_t> statePtr,
  ) {
    return _XXH3_freeState(
      statePtr,
    );
  }

  late final _XXH3_freeStatePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<XXH3_state_t>)>>(
      'XXH3_freeState');
  late final _XXH3_freeState =
      _XXH3_freeStatePtr.asFunction<int Function(ffi.Pointer<XXH3_state_t>)>();

  /// !
  /// @brief Copies one @ref XXH3_state_t to another.
  ///
  /// @param dst_state The state to copy to.
  /// @param src_state The state to copy from.
  /// @pre
  /// @p dst_state and @p src_state must not be `NULL` and must not overlap.
  void XXH3_copyState(
    ffi.Pointer<XXH3_state_t> dst_state,
    ffi.Pointer<XXH3_state_t> src_state,
  ) {
    return _XXH3_copyState(
      dst_state,
      src_state,
    );
  }
